force-app/main/default/objects/Class__c/fields/Classroom__c.field-meta.xml
<CustomField>
    <fullName>Classroom__c</fullName>
    <label>Classroom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Room 1</fullName>
            </value>
            <value>
                <fullName>Room 2</fullName>
            </value>
            <value>
                <fullName>Room 3</fullName>
            </value>
            <value>
                <fullName>Room 4</fullName>
            </value>
            <value>
                <fullName>Room 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>