force-app/main/default/objects/Class__c/fields/Professor__c.field-meta.xml
<CustomField>
    <fullName>Professor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>